* 2010-09-32 lekernel Removed debug ROM (made external), trace module
  (TODO: make external) and non-portable JTAG.

* 2009-12-21 lekernel Upgrade to LatticeMico32 3.5.

* 2009-11-12 lekernel Active-high interrupts.

* 2009-07-01 lekernel Based on LatticeMico32 core from
  mico32_72_linux.tar (LatticeMico32 v3.3).