@@ -49,6 +49,7 @@
 `define CFG_PL_BARREL_SHIFT_ENABLED
 `define CFG_SIGN_EXTEND_ENABLED
 `define CFG_MC_DIVIDE_ENABLED
+`define CFG_EBR_POSEDGE_REGISTER_FILE
 
 `define CFG_ICACHE_ENABLED
 `define CFG_ICACHE_ASSOCIATIVITY   1
